--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div id="container">
+    <header>
+      <img id="profile-picture" src="assets/images/avatar-jessica.jpeg" alt="avatar jessica">
+      <h1 id="name">Jessica Randall</h1>
+      <h2 id="location">London, United Kingdom</h2>
+    </header>
+    <main>
+      <p id="about-me">"Front-end developer and avid reader."</p>
+      <ul id="social-links">
+        <li><a href="https://github.com">GitHub</a></li>
+        <li><a href="https://www.frontendmentor.io">Frontend Mentor</a></li>
+        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+        <li><a href="https://twitter.com">Twitter</a></li>
+        <li><a href="https://www.instagram.com">Instagram</a></li>
+      </ul>
+    </main>
+    <footer>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Zoé Moeremans</a>.
+    </footer>
   </div>
 </body>
 </html>
