css done, few modifs in html

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <div id="container">
     <header>
       <img id="profile-picture" src="assets/images/avatar-jessica.jpeg" alt="avatar jessica">
-      <h1 id="name">Jessica Randall</h1>
-      <h2 id="location">London, United Kingdom</h2>
+      <h1 id="name" class="infos">Jessica Randall</h1>
+      <h2 id="location" class="infos">London, United Kingdom</h2>
     </header>
     <main>
       <p id="about-me">"Front-end developer and avid reader."</p>
       <ul id="social-links">
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="https://www.frontendmentor.io">Frontend Mentor</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-        <li><a href="https://twitter.com">Twitter</a></li>
-        <li><a href="https://www.instagram.com">Instagram</a></li>
+        <a href="https://github.com"><li>GitHub</li></a>
+        <a href="https://www.frontendmentor.io"><li>Frontend Mentor</li></a>
+        <a href="https://www.linkedin.com"><li>LinkedIn</li></a>
+        <a href="https://twitter.com"><li>Twitter</li></a>
+        <a href="https://www.instagram.com"><li>Instagram</li></a>        
       </ul>
     </main>
-    <footer>
+    <!-- <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Zoé Moeremans</a>.
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
